swan_kubernetes/swan_helm/swan_microservices/image-provider/templates/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: image-provider
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: image-provider
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: otel-demo
      podSelector:
        matchLabels:
          opentelemetry.io/name: frontend-proxy
    ports:
    - protocol: TCP
      port: 8081
